[gd_scene load_steps=3 format=3 uid="uid://dmk2tw8rk1gok"]

[ext_resource type="Script" uid="uid://yehrqurqruus" path="res://components/PopupDialog/dialog.gd" id="1_iwhp6"]
[ext_resource type="Texture2D" uid="uid://755dm07jfvdo" path="res://assets/Ika Duba/Progress bar ika.png" id="2_112fj"]

[node name="Dialog" type="Control"]
custom_minimum_size = Vector2(750, 400)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_iwhp6")
character_texture = ExtResource("2_112fj")
character_name = "]"
dialog_text = "]"

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.482353)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -520.0
offset_right = 300.0
offset_bottom = -120.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharacterImage" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_vertical = 2
texture = ExtResource("2_112fj")
expand_mode = 3

[node name="CharacterName" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 50.0
offset_right = 20.0
offset_bottom = 73.0
grow_horizontal = 2

[node name="DialogText" type="RichTextLabel" parent="Panel"]
clip_contents = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -20.0
offset_right = 301.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
scroll_active = false

[node name="NextButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -99.0
offset_top = -99.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
